[#TECH] - fix the white space style issue for styka

--- a/themes/styka/source/css/_partial/article.styl
+++ b/themes/styka/source/css/_partial/article.styl
@@ -157,7 +157,8 @@
     font-family: Consolas,"Courier New",Courier;
     text-shadow: none;
     word-wrap: break-word;
-    white-space: pre;
+    //white-space: pre;
+    display: inline-block;
     font-size: 17px;
     font-weight: 400;
   }
