--- a/themes/styka/source/css/_partial/highlight.styl
+++ b/themes/styka/source/css/_partial/highlight.styl
@@ -49,9 +49,9 @@ $line-numbers
       color: #349ef3
       padding: auto
       word-wrap: break-word
-      white-space: pre
       margin: 2px
-      display: inline-block
+      //white-space: pre
+      //display: inline-block
     a.fancy-ctn.fancybox:hover
       cursor: zoom-in
     //a::before
